# bey

./: .gitignore  ADVANCED_FEATURES_REPORT.md  Cargo.toml  GUI_API_DESIGN.md  IMPLEMENTATION_VISUALIZATION.md  IMPROVEMENTS.md  OPTIMIZATION_REPORT.md  README.md  TAURI_IMPLEMENTATION_SUMMARY.md  TUI_DEMO.md
.github/agents/: coder.md
benches/: benchmarks.rs
certificates/backup/: ca_20251031_171208.json  ca_20251031_173127.json  ca_20251101_001443.json  ca_20251101_021741.json
certificates/ca/: ca.json
certs/backup/: bey-12ffd728910953b4_20251101_022926.json  bey-1cb378b3b0a16a05_20251031_171208.json  bey-2d6c5579efdee129_20251101_005334.json  bey-2f0a84456199fe65_20251101_022020.json  bey-4fc808ea103a933f_20251101_023534.json  bey-66f6bfd3906f8eff_20251101_021921.json  ca_20251031_171208.json  ca_20251031_173127.json  ca_20251101_001443.json
certs/ca/: ca.json
certs/devices/: bey-2e80e906983122df.json  bey-cf1af56063744865.json  bey-ecf301bb7133dfe2.json
crates/bey-core/: Cargo.toml
src/: app.rs  lib.rs  main.rs  tauri_api.rs
src/crates/bey-discovery/: Cargo.toml
src/crates/bey-discovery/src/: lib.rs
src/crates/bey-file-transfer/: Cargo.toml
src/crates/bey-file-transfer/src/: concurrent_transfer.rs  file_server.rs  integrity_checker.rs  lib.rs  progress_tracker.rs  resume_manager.rs  security_manager.rs  storage.rs  storage_server.rs  transfer_engine.rs  transfer_queue.rs  types.rs
src/crates/bey-func/: Cargo.toml  README.md
src/crates/bey-func/src/: clipboard_func.rs  lib.rs  message_func.rs  storage_func.rs
src/crates/bey-gui/: Cargo.toml  README.md
src/crates/bey-gui/src/: lib.rs
src/crates/bey-gui/src/gui/: commands.rs  events.rs  mod.rs  state.rs
src/crates/bey-identity/: Cargo.toml
src/crates/bey-identity/src/: certificate.rs  config.rs  error.rs  lib.rs  storage.rs  types.rs  validation.rs
src/crates/bey-net/: Cargo.toml  README.md
src/crates/bey-net/src/: engine.rs  flow_control.rs  lib.rs  mdns_discovery.rs  metrics.rs  priority_queue.rs  receiver.rs  state_machine.rs  stream.rs  token.rs  udp_discovery.rs
src/crates/bey-permissions/: Cargo.toml
src/crates/bey-permissions/src/: lib.rs  policy_engine.rs
src/crates/bey-plugin/: Cargo.toml  README.md
src/crates/bey-plugin/src/: context.rs  event_bus.rs  hooks.rs  lib.rs  lifecycle.rs
src/crates/bey-storage/: Cargo.toml
src/crates/bey-storage/src/: bey_storage.rs  clipboard.rs  cloud_storage.rs  compression.rs  compression_tests.rs  key_management.rs  lib.rs  message.rs  object_storage.rs
src/crates/bey-storage/storage/local/test/: compression.txt
src/crates/bey-storage/tests/: integration_tests.rs
src/crates/bey-transport/: Cargo.toml  README.md
src/crates/bey-transport/certificates/backup/: ca_20251031_073552.json
src/crates/bey-transport/src/: connection_pool.rs  connection_pool_complete.rs  error_codes.rs  lib.rs  mtls_manager.rs  policy_engine.rs
src/crates/bey-transport/src/mtls/: config.rs  mod.rs
src/crates/bey-transport/src/policy/: condition.rs  config.rs  context.rs  mod.rs  rule.rs  set.rs  types.rs
src/crates/bey-transport/src/pool/: config.rs  mod.rs  types.rs
src/crates/bey-transport/tests/: config_tests.rs  error_codes_tests.rs  policy_engine_tests.rs  policy_module_tests.rs  transport_tests.rs
src/crates/bey-tui/: Cargo.toml
src/crates/bey-tui/src/: lib.rs
src/crates/bey-types/: Cargo.toml
src/crates/bey-types/src/: lib.rs
src/crates/error/: Cargo.toml
src/crates/error-derive/: Cargo.toml
src/crates/error-derive/src/: lib.rs
src/crates/error/examples/: advanced_features.rs  basic.rs  error_chain.rs  result_type.rs
src/crates/error/src/: lib.rs
src/crates/error/tests/: derive_tests.rs
src/crates/sys/: COMPLETION_REPORT.md  Cargo.toml  README.md
src/crates/sys/examples/: basic.rs  hooks.rs  hot_monitor.rs
src/crates/sys/src/: hooks.rs  lib.rs  monitor.rs
tests/: integration_tests.rs
