[package]
name = "bey"
version = "0.1.0"
edition = "2024"

[dependencies]
error = { path = "src/crates/error" }
sys = { path = "src/crates/sys" }
bey-types = { path = "src/crates/bey-types" }
bey-identity = { path = "src/crates/bey-identity" }
bey-storage = { path = "src/crates/bey-storage" }
bey-transport = { path = "src/crates/bey-transport" }
bey-net = { path = "src/crates/bey-net" }
bey-func = { path = "src/crates/bey-func" }
# bey-file-transfer 模块已被移除，其功能已被 bey-net 模块覆盖
# 如需文件传输功能，请使用 bey-net 模块的 send_large_file() 等API
# bey-file-transfer = { path = "src/crates/bey-file-transfer" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt", "net", "macros", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sysinfo = "0.37.2"
quinn = "0.11.9"
rustls = "0.23.34"
rcgen = "0.14.5"
sha2 = "0.10.9"
base64 = "0.22.1"
time = "0.3.44"
pem = "3.0.6"
futures = "0.3"

# 以下依赖原本用于文件传输模块，现在可以考虑移除或保留给其他模块使用
uuid = { version = "1.11", features = ["v4"] }
fastrand = "2.0"
keyring = "3.6"
aes-gcm = "0.10"
blake3 = "1.5"
async-trait = "0.1"
dashmap = "6.1"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.23.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false

[profile.release]
# 极致性能优化配置
opt-level = 3           # 最高优化级别
lto = true              # 链接时优化
codegen-units = 1       # 最小代码生成单元以获得更好的优化
panic = "abort"         # 使用abort而不是unwind以减少二进制大小
overflow-checks = false # 生产环境禁用溢出检查以提升性能
strip = true            # 去除调试符号
debug = false           # 禁用调试信息

[profile.bench]
# 基准测试优化配置
opt-level = 3
debug = true
lto = true
codegen-units = 1

[profile.test]
# 测试配置
opt-level = 1           # 测试时适度优化以提高速度
debug = true            # 保留调试信息便于调试
