[package]
name = "bey-core"
version = "0.1.0"
edition = "2021"
description = "BEY 核心库 - 提供基础数据结构和工具"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sysinfo = { workspace = true }