[package]
name = "bey-gui"
version = "0.1.0"
edition = "2021"
authors = ["BEY Team"]
description = "BEY GUI module using Tauri"

[dependencies]
tauri = { version = "2.1.2", features = ["devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
bey-func = { path = "../bey-func" }
bey-types = { path = "../bey-types" }
error = { path = "../error" }
tracing = "0.1"
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"

[lib]
name = "bey_gui"
path = "src/lib.rs"
