[package]
name = "bey-identity"
version = "0.1.0"
edition = "2021"

[dependencies]
error = { path = "../error" }
sys = { path = "../sys" }
tokio = { version = "1.48.0", features = ["rt", "net", "macros", "time", "sync", "fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rustls = "0.23.34"
rcgen = { version = "0.14.5", features = ["crypto", "pem"] }
tracing = "0.1"
chrono = "0.4.42"
uuid = "1.18.1"
base64 = "0.22.1"
time = "0.3.44"
sha2 = "0.10.9"
pem = "3.0.6"

[dev-dependencies]
tempfile = "3.0"
