[package]
name = "bey-net"
version = "0.1.0"
edition = "2021"
authors = ["BEY Team"]
description = "BEY网络模块 - 提供mDNS发现、网络通信等基础网络功能"

[dependencies]
# BEY核心模块
error = { path = "../error" }
sys = { path = "../sys" }
bey-types = { path = "../bey-types" }

# 异步运行时
tokio = { version = "1.48.0", features = ["net", "time", "sync", "macros"] }

# 序列化
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# 网络发现
mdns = "3.0"

# 日志
tracing = "0.1"

[lib]
name = "bey_net"
path = "src/lib.rs"
