[package]
name = "bey-permissions"
version = "0.1.0"
edition = "2021"

[dependencies]
error = { path = "../error" }
sys = { path = "../sys" }
tokio = { version = "1.48.0", features = ["rt", "net", "macros", "time", "sync", "fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.0"