[package]
name = "bey-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
# BEY现有模块
error = { path = "../error" }
sys = { path = "../sys" }
bey-net = { path = "../bey-net" }
bey-transport = { path = "../bey-transport" }
bey-file-transfer = { path = "../bey-file-transfer" }
bey-identity = { path = "../bey-identity" }

# 核心依赖
tokio = { version = "1.48.0", features = ["rt", "net", "macros", "time", "sync", "fs", "io-util"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1"
sha2 = "0.10.9"
bytes = "1.10.1"

# 压缩相关
zstd = "0.13"
lz4_flex = "0.11"
async-compression = { version = "0.4", features = ["zstd"] }

# 密钥管理和加密
keyring = { version = "3.6", features = ["sync-secret-service"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
fastrand = "2.0"

# 文件系统和缓存
walkdir = "2.5"
dashmap = "6.1"
lru = "0.12"
moka = { version = "0.12", features = ["future"] }
memmap2 = "0.9"

# 其他工具
dirs = "5.0"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.0"